--- a/10강_실습(원본).ipynb
+++ b/10강_실습(원본).ipynb
@@ -54,18 +54,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 23,
       "metadata": {
         "id": "FTNaN-iHlnNO"
       },
       "outputs": [],
       "source": [
+        "#클래스 정의\n",
         "class Cone :\n",
-        "    def __init__(self,radius = 20, height = 30):\n",
+        "    def __init__(self,radius = 20, height = 30): # 생성자 메서드: 인스턴스가 생성될 때 자동으로 실행됨\n",
         "        self.r = radius #self가 없을 경우 클래스 속 def __init__ 메서드안에서만 참조할 수 있게됨\n",
         "        self.h = height #self를 넣어 메서드 안에서 지역변수로 참조할 수 있게 함\n",
-        "\n",
-        "    def get_vol(self) :\n",
+        "#인스턴스 자기 자신을 가리키는 예약어. 인스턴스 변수와 메서드 접근에 사용됨.\n",
+        "    def get_vol(self) : #클래스안의 함수 = 메서스\n",
         "        return 1/3 * 3.14 * self.r ** 2 * self.h\n",
         "\n",
         "    def get_surf(self) :\n",
@@ -113,8 +114,15 @@
       "metadata": {
         "id": "kGjkpruVvTS5"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "6Ki9ieHgSALD"
+      }
     },
     {
       "cell_type": "markdown",
@@ -136,12 +144,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "unit_cone = Cone()# ()는 함수 호출, 없으면 메모리에 있는 객체를 그대로 호출\n",
+        "big_cone = Cone(50, 100)\n",
+        "\n",
+        "print(\"단위 원뿔의 겉넓이와 부피는\", unit_cone.get_vol(), unit_cone.get_surf(), \"입니다.\")\n",
+        "print(\"큰 원뿔의 겉넓이와 부피는\", big_cone.get_vol(), big_cone.get_surf(), \"입니다.\")"
+      ],
       "metadata": {
-        "id": "zQVNoXVKyB3M"
+        "id": "zQVNoXVKyB3M",
+        "outputId": "fbf84d29-dace-4928-e5d1-e103d3138e79",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "단위 원뿔의 겉넓이와 부피는 12559.999999999998 3140.0 입니다.\n",
+            "큰 원뿔의 겉넓이와 부피는 261666.66666666666 23550.0 입니다.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -154,12 +181,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "person1 = BMI(\"홍길동\", 40, 78, 182)\n",
+        "print(person1.name + \"님(\" +str(person1.age)+\"세)의 BMI 수치는\", person1.get_BMI(), \"결과는\", person1.get_status(), \"입니다.\")"
+      ],
       "metadata": {
-        "id": "tiZVGBTmyPFV"
+        "id": "tiZVGBTmyPFV",
+        "outputId": "de677859-857f-45e0-9761-a086e8e14ceb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "홍길동님(40세)의 BMI 수치는 23.54788069073783 결과는 과체중 입니다.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -181,12 +223,63 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#클래스 정의\n",
+        "class pCone :\n",
+        "    def __init__(self,radius = 20, height = 30):\n",
+        "        if radius > 0 and height > 0 : #생성자 실행 시 올바른 데이터 값 범위 제한\n",
+        "            self.__r = radius #프라이빗 필드\n",
+        "            self.__h = height #프라이빗 필드\n",
+        "\n",
+        "    def get_vol(self) :\n",
+        "        return 1/3 * 3.14 * self.__r ** 2 * self.__h\n",
+        "\n",
+        "    def get_surf(self) :\n",
+        "        return 3.14 * self.__r ** 2 + 3.14 * self.__r * self.__h\n",
+        "\n",
+        "    def get_radius(self) : #프라이빗 필드 데이터 반환 메서드\n",
+        "        return self.__r\n",
+        "    def get_height(self) : #프라이빗 필드 데이터 반환 메서드\n",
+        "        return self.__h\n",
+        "    def set_radius(self, radius) : #프라이빗 필드 데이터 변경 메서드\n",
+        "        if radius > 0 : #실질적인 데이터 변경 범위를 정함으로써 올바르지 못한 데이터 입력값을 제한\n",
+        "            self.__r = radius\n",
+        "    def set_height(self, height) : #프라이빗 필드 데이터 변경 메서드\n",
+        "        self.__h = height"
+      ],
       "metadata": {
         "id": "86XSydVIynoU"
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "perfect_cone = pCone(100, 50)\n",
+        "perfect_cone.get_surf()\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "QGWorDiXdf3q",
+        "outputId": "e68d2ddf-4019-4e12-e026-98460294481f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "47100.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
     },
     {
       "cell_type": "markdown",
